@@ -1,3 +1,15 @@
+2018-07-02  Antoine Quint  <graouts@apple.com>
+
+        [Web Animations] Crash in KeyframeEffectReadOnly::applyPendingAcceleratedActions()
+        https://bugs.webkit.org/show_bug.cgi?id=187139
+
+        Reviewed by Dean Jackson.
+
+        Ensure we have a resolved time value before trying to use it.
+
+        * animation/KeyframeEffectReadOnly.cpp:
+        (WebCore::KeyframeEffectReadOnly::applyPendingAcceleratedActions):
+
 2018-07-02  Youenn Fablet  <youenn@apple.com>
 
         Reject getUserMedia promise if capture fails
